extended notebook; added the const MFH energy term

--- a/mfh.ipynb
+++ b/mfh.ipynb
@@ -23,8 +23,7 @@
    "outputs": [],
    "source": [
     "# GEOMETRY\n",
-    "xyz_file = \"clars_goblet.xyz\"\n",
-    "geom = ase.io.read(xyz_file)\n",
+    "geom = ase.io.read(\"geom/clars_goblet.xyz\")\n",
     "\n",
     "# Spin guess is set in atom tags (1 - up, 2 - down)\n",
     "# one option to modify it is with the following (edit->modify & file->save):\n",
@@ -80,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "mfh_model.report(num_orb=1)"
+    "mfh_model.report(num_orb=2)"
    ]
   },
   {
@@ -92,7 +91,7 @@
     "# Visualize one specific orbital\n",
     "\n",
     "spin = 0\n",
-    "index = 20\n",
+    "index = 0\n",
     "print(\"Orbital index: %d, spin %d\" % (index, spin))\n",
     "print(\"Energy: %.6f eV\" % mfh_model.evals[spin][index])\n",
     "mfh_model.plot_orbital(mo_index=index, spin=spin)\n",
@@ -102,23 +101,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Series in U\n",
-    "\n",
-    "u_list = np.arange(0.0, 5.0, 0.1)\n",
-    "abs_mag_list = []\n",
-    "energy_list = []\n",
-    "gap_list = []\n",
-    "\n",
-    "for u in u_list:\n",
-    "    mfh_model.run_mfh(u = u, print_iter=False, plot=False)\n",
-    "    abs_mag_list.append(mfh_model.mag_list[-1])\n",
-    "    energy_list.append(mfh_model.energy_list[-1])\n",
-    "    gap_list.append(mfh_model.gap_eff)"
+    "# Series calculations"
    ]
   },
   {
@@ -127,11 +113,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(u_list, abs_mag_list, 'o')\n",
-    "plt.ylabel(\"Absolute magnetization\")\n",
-    "plt.xlabel(\"U [eV]\")\n",
+    "geom = ase.io.read(\"geom/clars_goblet.xyz\")\n",
+    "\n",
+    "t = 2.7\n",
+    "\n",
+    "singlet_mfh_model = tbmfh.MeanFieldHubbardModel(geom, [t], charge=0, multiplicity=1)\n",
+    "triplet_mfh_model = tbmfh.MeanFieldHubbardModel(geom, [t], charge=0, multiplicity=3)\n",
+    "# (for the clar's goblet, the correct triplet state is found also with singlet initial guess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reproducing Extended Data Fig. 1 from\n",
+    "# Mishra 2020 \"Topological frustration induces unconventional magnetism in a nanographene\"\n",
+    "\n",
+    "u_t_ratios = np.arange(0.5, 1.6, 0.1)\n",
+    "\n",
+    "singlet_energies = []\n",
+    "triplet_energies = []\n",
+    "\n",
+    "for ut_ratio in u_t_ratios:\n",
+    "    \n",
+    "    u = ut_ratio * t\n",
+    "    \n",
+    "    singlet_mfh_model.run_mfh(u)\n",
+    "    singlet_energies.append(singlet_mfh_model.energy)\n",
+    "    \n",
+    "    triplet_mfh_model.run_mfh(u)\n",
+    "    triplet_energies.append(triplet_mfh_model.energy)\n",
+    "    \n",
+    "singlet_energies = np.array(singlet_energies)\n",
+    "triplet_energies = np.array(triplet_energies)\n",
+    "\n",
+    "st_gap = triplet_energies - singlet_energies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(u_t_ratios, st_gap*1000, 'o-')\n",
+    "plt.ylabel(\"triplet - singlet [meV]\")\n",
+    "plt.xlabel(\"U/t\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
