fixed sts_map height bug

--- a/mfh.ipynb
+++ b/mfh.ipynb
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "mfh_model.report(num_orb=2)"
+    "mfh_model.report(num_orb=2, sts_h=6.0, sts_broad=0.05)"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
