--- a/mfh.ipynb
+++ b/mfh.ipynb
@@ -38,11 +38,17 @@
    "source": [
     "# CALCULATION PARAMETERS\n",
     "\n",
-    "t1 = 2.7 # first nearest neighbor\n",
+    "# hoppings in eV\n",
+    "\n",
+    "t1 = 2.7 # first nearest neighbor \n",
     "t2 = 0.1 # second nearest neighbor\n",
     "t3 = 0.4 # third nearest neighbor\n",
     "\n",
-    "t_list = [t1, t2, t3]\n",
+    "# Only first nearest neighbor\n",
+    "t_list = [t1]\n",
+    "\n",
+    "# Up to third nearest neighbor\n",
+    "#t_list = [t1, t2, t3]\n",
     "\n",
     "charge = 0\n",
     "multiplicity = 1"
