update example notebook

--- a/mfh.ipynb
+++ b/mfh.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import ase\n",
     "import ase.io\n",
-    "import ase.visualize\n",
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,12 +21,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GEOMETRY\n",
+    "# Geometry\n",
     "geom = ase.io.read(\"geom/clars_goblet.xyz\")\n",
     "\n",
     "# Spin guess is set in atom tags (1 - up, 2 - down)\n",
-    "# one option to modify it is with the following (edit->modify & file->save):\n",
-    "#ase.visualize.view(geom)"
+    "# one option is to use the following (edit->modify)\n",
+    "geom.edit()"
    ]
   },
   {
@@ -36,36 +35,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CALCULATION PARAMETERS\n",
+    "# Set up the main calculator object with tight-binding parameters\n",
     "\n",
-    "# hoppings in eV\n",
-    "\n",
-    "t1 = 2.7 # first nearest neighbor \n",
-    "t2 = 0.1 # second nearest neighbor\n",
-    "t3 = 0.4 # third nearest neighbor\n",
-    "\n",
-    "# Only first nearest neighbor\n",
-    "t_list = [t1]\n",
-    "\n",
-    "# Up to third nearest neighbor\n",
-    "#t_list = [t1, t2, t3]\n",
-    "\n",
-    "charge = 0\n",
-    "multiplicity = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mfh_model = tbmfh.MeanFieldHubbardModel(geom, t_list, charge, multiplicity)\n",
+    "mfh_model = tbmfh.MeanFieldHubbardModel(\n",
+    "    geom,\n",
+    "    t_list = [2.7, 0.1, 0.4], # List of n'th nearest neighbor hoppings in eV\n",
+    "    charge = 0,\n",
+    "    multiplicity = 1\n",
+    ")\n",
     "\n",
     "mfh_model.print_parameters()\n",
-    "\n",
-    "mfh_model.visualize_spin_guess()\n",
-    "#mfh_model.visualize_tb_model()"
+    "mfh_model.visualize_spin_guess()"
    ]
   },
   {
