functionality to scale CC lengths

--- a/mfh.ipynb
+++ b/mfh.ipynb
@@ -24,6 +24,9 @@
     "# Geometry\n",
     "geom = ase.io.read(\"geom/clars_goblet.xyz\")\n",
     "\n",
+    "# Use the following to scale all CC bonds to a specific length\n",
+    "tbmfh.utils.scale_to_cc_bond_length(geom, cc_bond=1.42)\n",
+    "\n",
     "# Spin guess is set in atom tags (1 - up, 2 - down)\n",
     "# one option is to use the following (edit->modify)\n",
     "geom.edit()"
@@ -41,7 +44,8 @@
     "    geom,\n",
     "    t_list = [2.7, 0.1, 0.4], # List of n'th nearest neighbor hoppings in eV\n",
     "    charge = 0,\n",
-    "    multiplicity = 1\n",
+    "    multiplicity = 1,\n",
+    "    bond_cutoff = 1.8\n",
     ")\n",
     "\n",
     "mfh_model.print_parameters()\n",
@@ -54,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfh_model.run_mfh(u = 3.0, print_iter=False, plot=False)"
+    "mfh_model.run_mfh(u = 3.6, print_iter=False, plot=False)"
    ]
   },
   {
