--- a/mfh.ipynb
+++ b/mfh.ipynb
@@ -25,10 +25,11 @@
     "geom = ase.io.read(\"geom/clars_goblet.xyz\")\n",
     "\n",
     "# Use the following to scale all CC bonds to a specific length\n",
-    "tbmfh.utils.scale_to_cc_bond_length(geom, cc_bond=1.42)\n",
+    "#tbmfh.utils.scale_to_cc_bond_length(geom, cc_bond=1.42)\n",
     "\n",
     "# Spin guess is set in atom tags (1 - up, 2 - down)\n",
     "# one option is to use the following (edit->modify)\n",
+    "# to visualize the spin guess use (view->colors->by tag)\n",
     "geom.edit()"
    ]
   },
@@ -44,8 +45,7 @@
     "    geom,\n",
     "    t_list = [2.7, 0.1, 0.4], # List of n'th nearest neighbor hoppings in eV\n",
     "    charge = 0,\n",
-    "    multiplicity = 1,\n",
-    "    bond_cutoff = 1.8\n",
+    "    multiplicity = 1\n",
     ")\n",
     "\n",
     "mfh_model.print_parameters()\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mfh_model.run_mfh(u = 3.6, print_iter=False, plot=False)"
+    "mfh_model.run_mfh(u = 3.0, print_iter=False, plot=False)"
    ]
   },
   {
