--- a/example.ipynb
+++ b/example.ipynb
@@ -84,7 +84,7 @@
     "index = 0\n",
     "print(\"Orbital index: %d, spin %d\" % (index, spin))\n",
     "print(\"Energy: %.6f eV\" % mfh_model.evals[spin][index])\n",
-    "mfh_model.plot_orbital(mo_index=index, spin=spin)\n",
+    "mfh_model.plot_mo_eigenvector(mo_index=index, spin=spin)\n",
     "\n",
     "# corresponding eigenvector (each element corresponds in order to atoms defined in geom/mfh_model.ase_geom)\n",
     "evec = mfh_model.evecs[spin][index]"
@@ -155,6 +155,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Natural orbitals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geom = ase.io.read(\"geom/clars_goblet.xyz\")\n",
+    "\n",
+    "# \"open shell\" case, normal MFH\n",
+    "mfh_model = tbmfh.MeanFieldHubbardModel(geom, [2.7, 0.1, 0.4], charge=0, multiplicity=1)\n",
+    "mfh_model.run_mfh(u = 3.0, print_iter=False, plot=False)\n",
+    "mfh_model.calculate_natural_orbitals()\n",
+    "\n",
+    "# \"closed shell\" case (just tight-binding)\n",
+    "tb_model = tbmfh.MeanFieldHubbardModel(geom, [2.7, 0.1, 0.4], charge=0, multiplicity=1)\n",
+    "tb_model.run_mfh(u = 0.0, print_iter=False, plot=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_orb = 2\n",
+    "h = 8.0\n",
+    "\n",
+    "for i_rel in np.arange(num_orb, -num_orb, -1):\n",
+    "    i_mo = int(np.around(0.5 * (mfh_model.num_spin_el[0] + mfh_model.num_spin_el[1]))) + i_rel - 1\n",
+    "    \n",
+    "    fig, axs = plt.subplots(nrows=1, ncols=7, figsize=(7 * mfh_model.figure_size[0], mfh_model.figure_size[1]))\n",
+    "    \n",
+    "    mfh_model.plot_no_eigenvector(i_mo, ax=axs[0])\n",
+    "    mfh_model.plot_orb_squared_map(axs[1], mfh_model.no_evecs[i_mo], h=h)\n",
+    "    \n",
+    "    mfh_model.plot_mo_eigenvector(i_mo, spin=0, ax=axs[2])\n",
+    "    mfh_model.plot_mo_eigenvector(i_mo, spin=1, ax=axs[3])\n",
+    "    mfh_model.plot_sts_map(axs[4], mfh_model.evals[0, i_mo], h=h)\n",
+    "    \n",
+    "    tb_model.plot_mo_eigenvector(i_mo, spin=0, ax=axs[5])\n",
+    "    tb_model.plot_sts_map(axs[6], tb_model.evals[0, i_mo], h=h)\n",
+    "    \n",
+    "    plt.subplots_adjust(wspace=0.0, hspace=0)\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -179,6 +232,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
