improve sts & orb_squared plotting functionality

--- a/example.ipynb
+++ b/example.ipynb
@@ -92,7 +92,7 @@
     "mfh_model.pp.plot_mo_eigenvector(mo_index=index, spin=spin)\n",
     "\n",
     "# Visualize the orbital squared\n",
-    "mfh_model.pp.plot_orb_squared_map(plt.gca(), evec)"
+    "mfh_model.pp.plot_orb_squared_map(evec)"
    ]
   },
   {
@@ -217,14 +217,14 @@
     "    fig, axs = plt.subplots(nrows=1, ncols=7, figsize=(7 * mfh_model.figure_size[0], mfh_model.figure_size[1]))\n",
     "    \n",
     "    mfh_model.pp.plot_no_eigenvector(i_mo, ax=axs[0])\n",
-    "    mfh_model.pp.plot_orb_squared_map(axs[1], mfh_model.pp.no_evecs[i_mo], h=h)\n",
+    "    mfh_model.pp.plot_orb_squared_map(mfh_model.pp.no_evecs[i_mo], h=h, ax=axs[1])\n",
     "    \n",
     "    mfh_model.pp.plot_mo_eigenvector(i_mo, spin=0, ax=axs[2])\n",
     "    mfh_model.pp.plot_mo_eigenvector(i_mo, spin=1, ax=axs[3])\n",
-    "    mfh_model.pp.plot_sts_map(axs[4], mfh_model.evals[0, i_mo], h=h)\n",
+    "    mfh_model.pp.plot_sts_map(mfh_model.evals[0, i_mo], h=h, ax=axs[4])\n",
     "    \n",
     "    tb_model.pp.plot_mo_eigenvector(i_mo, spin=0, ax=axs[5])\n",
-    "    tb_model.pp.plot_sts_map(axs[6], tb_model.evals[0, i_mo], h=h)\n",
+    "    tb_model.pp.plot_sts_map(tb_model.evals[0, i_mo], h=h, ax=axs[6])\n",
     "    \n",
     "    plt.subplots_adjust(wspace=0.0, hspace=0)\n",
     "    plt.show()"
